# dds_registration

./: .env.SAMPLE  .eslintignore  .eslintrc.yaml  .gitignore  .lvimrc  .pre-commit-config.yaml  .prettierignore  .stylelintignore  .stylelintrc.yaml  CHANGES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  WORKFLOW.md  conftest.py  default_settings.py  deployment.md  gulpfile.mjs  index.wsgi  manage.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  test_create_invoice_pdf.py  tsconfig.json
.github/workflows/: run_tests.yml
accounts/: README.md  urls.py  views.py
core/constants/: date_time_formats.py
core/helpers/: errors.py  forms.py
dds_registration/: __init__.py  admin.py  admin.py.ORIG  apps.py  asgi.py  backends.py  context_processors.py  email.py  forms.py  models.py  money.py  settings.py  settings_dev.py  settings_prod.py  urls.py  views.py  wsgi.py
dds_registration/converters/: FloatUrlParameterConverter.py
dds_registration/fixtures/: README.md  site-demo.yaml  site-local.yaml  site-real.yaml  test-event.yaml  test-options.yaml  test-payment-1-created.yaml  test-registration-1-submited.yaml  test-registration.yaml  test-users.yaml
dds_registration/management/: __init__.py
dds_registration/middleware/: BeautifulMiddleware.py
dds_registration/migrations/: 0001_initial.py  0002_alter_event_registration_close_and_more.py  0002_alter_membership_membership_type_and_more.py  0002_alter_registrationoption_currency.py  0002_alter_registrationoption_item.py  0002_event_is_public.py  0002_invoice_payment_method_alter_invoice_status_and_more.py  0002_membership_invoice.py  0002_remove_event_refund_window_days_and_more.py  0002_remove_registration_single_registration.py  0002_userprofile.py  0003_alter_membership_membership_type.py  0003_invoice_currency.py  0003_membership_membership_type_membership_paid_and_more.py  0003_message_created_at.py  0003_payment_method.py  0003_registration_send_update_emails.py  0003_registration_single_active_registration.py  0003_remove_registration_single_registration_per_verified_user_account_and_more.py  0003_rename_is_public_event_public.py  0003_rename_userprofile_profile.py  0004_membership_mailing_list.py  0004_remove_event_created_at_remove_event_updated_at_and_more.py  0004_remove_invoice_template.py  0005_alter_event_refund_last_day_alter_membership_payment_and_more.py  0005_membership_currency.py  0006_alter_membership_invoice_alter_registration_invoice.py  0006_message_subject.py  0007_event_free_alter_registration_option.py  0007_remove_membership_currency.py  0008_message_for_members_alter_message_event_and_more.py  0009_event_application_form_registration_application.py  0010_event_application_submitted_email.py  0011_event_application_accepted_email_and_more.py  0012_event_application_rejected_email_and_more.py  0013_event_credit_cards_event_vat_rate.py  0014_event_no_vat_for_credit_cards.py  0015_event_members_only_and_more.py  0016_registrationoption_membership_end_year_and_more.py  0017_alter_registrationoption_membership_end_year.py  (+7 more)
dds_registration/team_calendar/: index.html
dds_registration/templates/: base-core.html.django  base-layout.html.django  base-main.html.django  base-regular.html.django  components-demo.html.django  events_list.html.django  landing.html.django  login.html.django  profile.html.django  robots.txt
dds_registration/templatetags/: README.md  getattr.py  is_in_list.py
dds_registration/urls/: __init__.py  accounts_urls.py  application_urls.py  billing_event.py  billing_event_invoice.py  billing_event_invoice_urls.py  billing_event_stripe.py  billing_event_stripe_urls.py  billing_event_urls.py  billing_membership_invoice.py  billing_membership_invoice_urls.py  billing_membership_stripe.py  billing_membership_stripe_urls.py  billing_membership_urls.py  event_urls.py  membership.py  membership_urls.py  payments.py  payments_urls.py  root.py  root_urls.py
dds_registration/views/: __init__.py  applications.py  billing.py  billing_event.py  billing_event_invoice.py  billing_event_stripe.py  (+17 more)
src/: README.md
static/: README.md  app-info.json
tests/: test_cookie_settings.py  test_team_calendar.py
(+205 files in other folders)
